manifests/prod.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: echo-prod
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: echo-prod
  namespace: echo-prod
  labels:
    app: echo-prod
spec:
  selector:
    matchLabels:
      app: echo-prod
  template:
    metadata:
      labels:
        app: echo-prod
      annotations:
        prometheus.io/path: "/status/format/prometheus"
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      containers:
        - name: echo-prod
          image: mendhak/http-https-echo
          ports:
            - containerPort: 80
            - containerPort: 443
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: "device.k3s.redcarpetup.com/roles"
#                    operator: In
#                    values:
#                      - prod
---
apiVersion: v1
kind: Service
metadata:
  name: echo-prod-service1
  namespace: echo-prod
spec:
  selector:
    app: echo-prod
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: echo-prod-service2
  namespace: echo-prod
spec:
  selector:
    app: echo-prod
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-prod-ingress
  namespace: echo-prod
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - prod-k3s.redcarpetup.com
      secretName: ssl
  rules:
    - host: "prod-k3s.redcarpetup.com"
      http:
        paths:
          - path: /api1
            pathType: Prefix
            backend:
              service:
                name: echo-prod-service1
                port:
                  number: 80
          - path: /api2
            pathType: Prefix
            backend:
              service:
                name: echo-prod-service2
                port:
                  number: 80
